fix home page overlap screensize bug

--- a/react-app/src/components/DashBoard/wallet.css
+++ b/react-app/src/components/DashBoard/wallet.css
@@ -27,16 +27,13 @@
 
 .wallet_leftbar--coinholder > .wallet_leftbar--coinselector{
     box-sizing: border-box;
-    height: 5.5vw;
+    height: 50px;
     margin: 10px;
-    margin-left: 34px;
     border: #020202;
     align-items: stretch;
     box-sizing: border-box;
-    list-style-position:inside;
-    width: 250px;
-    /* width: 115%; */
-    margin-left: 50px;
+    list-style-position: inside;
+    width: inherit;
     box-shadow: 1px 1px 10px #4745453a;
     z-index: 3;
 }
